@startuml


interface InfoDataClass{
    + nome: String
    + codigo: Int
}


interface InfoInterface {
    # info: InfoDataClass
    # data: InfoDataClass

    + equals(other: Any?): Boolean
    + create(): InfoInterface
}

InfoDataClass *-- InfoInterface

class InfoAluno <<data>> {
    + nome: String
    + sobrenome: String
    + codigo: Int
}

InfoDataClass <|-- InfoAluno

class Aluno {
    # info: InfoDataClass
    # data: InfoDataClass

    + equals(other: Any?): Boolean
    + create(): InfoInterface
}

InfoInterface <|-- Aluno

class InfoCurso <<data>> {
    + nome: String
    + sobrenome: String
    + codigo: Int
    + professor_titular: InfoProfessor
    + professor_adjunto: InfoProfessor
    + qtde_maxima_de_alunos: Int
    + alunos_matriculados: List<InfoAluno>
}

InfoDataClass <|-- InfoCurso

class Curso {
    # info: InfoDataClass
    # data: InfoDataClass

    + equals(other: Any?): Boolean
    + create(): InfoInterface
}

InfoInterface <|-- Curso


class InfoProfessor <<data>> {
    + nome: String
    + sobrenome: String
    + codigo: Int
    + is_titular: Boolean
    + is_adjunto: Boolean
    + especialidade: String
    + horas_monitoria: Int
}

InfoDataClass <|-- InfoProfessor

class Professor {
    # info: InfoDataClass
    # data: InfoDataClass

    + equals(other: Any?): Boolean
    + create(): InfoInterface
    - is_titular(info: InfoDataClass): Boolean
    - is_adjunto(info: InfoDataClass): Boolean
}

InfoInterface <|-- Professor

@enduml